[package]
name = "socket_programming"
version = "0.1.0"
authors = ["Sabaniki <sawada13@mccc.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "=3.0.0-beta.2"
env_logger = "0.8.2"
failure = "0.1.8"
log = "0.4.14"
